--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^12.2.0",
     "antd": "^4.8.0",
     "axios": "^0.21.0",
-    "less": "^3.12.2",
+    "jsonp": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -39,5 +39,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.1.3:3000"
+  "proxy": "http://192.168.1.3:3000",
+  "devDependencies": {
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0"
+  }
 }
